--- a/cpp_exp.vcxproj.filters
+++ b/cpp_exp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="fast_advance.cpp">
       <Filter>template</Filter>
     </ClCompile>
+    <ClCompile Include="variadic_template.cpp">
+      <Filter>template</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cpp_exp_base.h">
